<resources>
    <string name="app_name">Chess With Hats</string>

    <!-- Login Activity Strings -->
    <string name="login_btnLogin">Log In</string>
    <string name="login_txtEmailHint">Email Address</string>
    <string name="login_txtPasswordHint">Password</string>
    <string name="login_btnCreateAccount">Create Account</string>

    <!-- Create Account Activity Strings -->
    <string name="createaccount_Title">Create an Account</string>
    <string name="createaccount_txtEmailHint">Email Address</string>
    <string name="createaccount_txtUsernameHint">Username</string>
    <string name="createaccount_txtPasswordHint">Password</string>
    <string name="createaccount_btnCreateAccount">Create Account</string>

    <!-- Home Activity Strings -->
    <string name="home_newGame">New Game</string>
    <string name="home_manageFriends">Manage Friends</string>
    <string name="home_manageAccount">Manage Account</string>
    <string name="home_signOut">Sign Out</string>

    <!-- New Game Activity Strings -->
    <string-array name="newgame_gameTypes">
        <item>Chess</item>
        <item>Chess960</item>
        <item>Peasants\' Revolt</item>
        <item>Transformers</item>
    </string-array>

    <string-array name="hatTypes">
        <item>None</item>
        <item>Fedora</item>
        <item>Top Hat</item>
    </string-array>

    <string-array name="newgame_opponentTypes">
        <item>Another User</item>
        <item>Computer</item>
        <item>Random Opponent</item>
        <item>Ranked Opponent</item>
    </string-array>
</resources>
