<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:id="@+id/home_menu_NewGame"
            android:icon="@drawable/ic_add_circle_black_24dp"
            android:title="@string/home_newGame"/>
        <item android:id="@+id/home_menu_ManageFriends"
            android:icon="@drawable/ic_people_black_24dp"
            android:title="@string/home_manageFriends"/>
        <item android:id="@+id/home_menu_ManageAccount"
            android:icon="@drawable/ic_account_circle_black_24dp"
            android:title="@string/home_manageAccount"/>
        <item android:id="@+id/home_menu_SignOut"
            android:icon="@drawable/ic_arrow_back_black_24dp"
            android:title="@string/home_signOut"/>
    </group>
</menu>