<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/createaccount_Title"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:textSize="25sp"/>

            <EditText
                android:id="@+id/createaccount_edtEmailAddress"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:hint="@string/createaccount_txtEmailHint"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"/>

            <EditText
                android:id="@+id/createaccount_edtUsername"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1"
                android:hint="@string/createaccount_txtUsernameHint"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"/>

            <EditText
                android:id="@+id/createaccount_edtPassword"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLines="1"
                android:hint="@string/createaccount_txtPasswordHint"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"/>

            <Button
                android:id="@+id/createaccount_btnCreateAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginEnd="5dp"
                android:text="@string/createaccount_btnCreateAccount" />


        </LinearLayout>

    </ScrollView>

</LinearLayout>